--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "vuetify": "1.0.0-alpha.3",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
-    "aspnet-prerendering": "^3.0.1"
+    "aspnet-prerendering": "^3.0.1",
+    "aspnet-webpack": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
