--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "node server",
     "start": "node server",
-    "build": "rimraf dist && npm run build:client && npm run build:server",
+    "build": "npm run build:client && npm run build:server",
     "build:client": "set NODE_ENV=production && webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "set NODE_ENV=production && webpack --config build/webpack.server.config.js --progress --hide-modules"
   },
@@ -21,16 +21,15 @@
     "cross-env": "^5.1.1",
     "es6-promise": "^4.1.1",
     "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.2",
     "lru-cache": "^4.1.1",
     "serialize-javascript": "^1.4.0",
     "serve-favicon": "^2.4.5",
     "vee-validate": "^2.0.0-rc.25",
-    "vue": "^2.5.9",
+    "vue": "^2.5.13",
     "vue-i18n": "^7.3.2",
     "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1",
-    "vue-server-renderer": "^2.5.9",
+    "vue-server-renderer": "^2.5.13",
     "vuelidate": "^0.6.1",
     "vuetify": "1.0.0-alpha.3",
     "vuex": "^3.0.1",
@@ -46,8 +45,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
+    "clean-webpack-plugin": "^0.1.17",
+    "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.7",
     "event-source-polyfill": "^0.0.12",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "highlight.js": "^9.12.0",
