--- a/package.json
+++ b/package.json
@@ -19,16 +19,25 @@
   "dependencies": {
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
+    "chokidar": "^2.0.0",
     "compression": "^1.7.1",
-    "cross-env": "^5.1.1",
-    "es6-promise": "^4.1.1",
+    "cookie-parser": "^1.4.3",
+    "cross-env": "^5.1.3",
+    "dotenv": "^4.0.0",
+    "es6-promise": "^4.2.2",
     "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "lru-cache": "^4.1.1",
+    "memory-fs": "^0.4.1",
+    "node-fetch": "^1.7.3",
+    "route-cache": "^0.4.4",
     "serialize-javascript": "^1.4.0",
     "serve-favicon": "^2.4.5",
-    "vee-validate": "^2.0.0-rc.25",
+    "shopify-buy": "^1.0.2",
+    "vee-validate": "^2.0.0",
     "vue": "^2.5.13",
-    "vue-i18n": "^7.3.2",
+    "vue-analytics": "^5.8.0",
+    "vue-i18n": "^7.3.3",
     "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.13",
@@ -40,42 +49,52 @@
     "aspnet-webpack": "^2.0.3"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.6",
+    "autoprefixer": "^7.2.3",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
-    "clean-webpack-plugin": "^0.1.17",
-    "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.7",
+    "eslint": "^4.15.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^4.2.0",
     "event-source-polyfill": "^0.0.12",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
+    "file-loader": "^1.1.6",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "highlight.js": "^9.12.0",
     "html-webpack-plugin": "^2.30.1",
-    "mdi": "^2.0.46",
+    "husky": "^0.14.3",
+    "mdi": "^2.1.19",
     "pug": "^2.0.0-rc.4",
+    "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "script-ext-html-webpack-plugin": "^1.8.8",
-    "style-loader": "^0.19.0",
+    "style-loader": "^0.19.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.6.2",
     "vue-color": "^2.4.3",
-    "vue-loader": "^13.5.0",
+    "vue-loader": "^13.6.2",
     "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.5.9",
-    "to-string-loader": "^1.1.5",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.12.2",
+    "vue-template-compiler": "^2.5.13",
+    "webpack": "^3.10.0",
+    "webpack-dev-middleware": "^2.0.3",
     "webpack-hot-middleware": "^2.21.0",
     "webpack-merge": "^4.1.1",
     "webpack-node-externals": "^1.6.0",
-    "awesome-typescript-loader": "^3.0.0",
-    "uglifyjs-webpack-plugin": "^1.1.5"
+    "clean-webpack-plugin": "^0.1.18",
+    "copy-webpack-plugin": "^4.5.0",
+    "awesome-typescript-loader": "^3.5.0"
   }
 }
